--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="title_activity_direction_settings">DirectionSettingsActivity</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="loading">Loading...</string>
+    <string name="auth_failed">Auth failed</string>
 </resources>
